<resources>
    <string name="app_name"> STORY TIME </string>
    <string name="actionSettings">Settings</string>
    <string name="actionReader"> Enable Reader </string>
    <string name="actionFontSize"> Large Font Size </string>
    <string name="actionNightMode"> Enable Night Mode </string>
    <string name="about"> About </string>
    <string name="title1">"THE MONKEY AND THE CROCODILE"</string>
    <string name="story1">
        "Once upon a time, a clever monkey lived in a tree that bore juicy, red rose apples. He was"
        "very happy. One fine day, a crocodile swam up to that tree and told the monkey that he had"
        "traveled a long distance and was in search of food as he was very hungry. The kind monkey "
        "offered him a few rose apples. The crocodile enjoyed them very much and asked the monkey "
        "whether he could come again for some more fruit. The generous monkey happily agreed.\n"
        "The crocodile returned the next day. And the next. And the next one after that. Soon the "
        "two became very good friends. They discussed their lives, their friends and family, like "
        "all friends do. The crocodile told the monkey that he had a wife and that they lived on "
        "the other side of the river. So the kind monkey offered him some extra rose apples to take"
        "home to his wife. The crocodile’s wife loved the rose apples and made her husband promise "
        "to get her some every day.\n"
        "Meanwhile, the friendship between the monkey and the crocodile deepened as they spent more"
        "and more time together. The crocodile’s wife started getting jealous. She wanted to put an"
        "end to this friendship. So she pretended that she could not believe that her husband could"
        "be friends with a monkey. Her husband tried to convince her that he and the monkey shared "
        "a true friendship. The crocodile’s wife thought to herself that if the monkey lived on a "
        "diet of rose monkeys, his flesh would be very sweet. So she asked the crocodile to invite"
        "the monkey to their house.\n"
        "The crocodile was not happy about this. He tried to make the excuse that it would be "
        "difficult to get the monkey cross the river. But his wife was determined to eat the "
        "monkey’s flesh. So she thought of a plan. One day, she pretended to be very ill and told "
        "the crocodile that the doctor said that she would only recover if she ate a monkey’s heart."
        "If her husband wanted to save her life, he must bring her his friend’s heart.\n"
        "The crocodile was aghast. He was in a dilemma. On the one hand, he loved his friend. "
        On the other, he could not possibly let his" wife die. The crocodile’s wife threatened him"
        "saying that if he did not get her the monkey’s heart, she would surely die.\n"
        "So the crocodile went to the rose apple tree and invited the monkey to come home to meet "
        "his wife. He told the monkey that he could ride across the river on the crocodile’s back. "
        "The monkey happily agreed. As they reached the middle of the river, the crocodile began to"
        "sink. The frightened monkey asked him why he was doing that. The crocodile explained that "
        "he would have to kill the monkey to save his wife’s life. The clever monkey told him that "
        "he would gladly give up his heart to save the life of the crocodile’s wife, but he had left"
        "his heart behind in the rose apple tree. He asked the crocodile to make haste and turn "
        "back so that the monkey could go get his heart from the apple tree.\n"
        "The silly crocodile quickly swam back to the rose apple tree.\n"
        "The monkey scampered up the tree to safety. He told the crocodile to tell his wicked wife"
        "that she had married the biggest fool in the world.\n\n"
   </string>
    <string name="story11">
        "Long, long ago, there lived a huge crocodile in the river Ganges. "
        "The river flowed through a dense jungle. On both sides of the river there stood tall "
        "jamun and other fruit trees. In one such tree there lived a big monkey by the name of "
        "Raktamukha. He ate fruits from the tree and passed his days happily jumping from one "
        "tree to another. Sometimes, he climbed down the tree; took a bath in the river and rested"
        "for a while on its bank. \n"

        "One day, the crocodile came out of the river and sat under the big jamun tree in which "
        "the monkey lived. The monkey who was sitting high on a branch saw the crocodile taking "
        "rest under the tree. He became very eager to talk to the crocodile and cultivate a "
        "friendship with him.\n"

         "Since you're taking rest under the tree, said the moneky, you're my guest. It's my "
        "duty to offer you food.\n"

         "The monkey gave jamuns and other fruits to the crocodile to eat. The crocodile ate them"
        "and thanked the monkey for his hospitality. \n"

        "The monkey and the crocodile talked together for hours and soon they became friends. "
        "They developed such friendship that neither of the two was happy to miss each other's "
        "company even for a single day. Early since morning, the monkey would start looking for"
        "the crocodile, and the crocodile would also swim up to the jamun tree as early as possible."
        "They would sit together, have a hearty chat and the monkey would offer him the delicious"
        "jamuns. This became their daily routine.\n"

        "One day, the monkey gave some fruits to the crocodile for his wife, as well. The crocodile"
        "took the fruits happily to his wife and also narrated the whole story to her.\n"

        "The next day, the crocodile's wife said to her husband, Dear, if these fruits are so "
        "tasty, then the monkey who eats these fruits must be ten times more tasty. Why don't you "
        "bring the heart of this monkey for my meals?\n"

        "The crocodile was shocked to hear these words from his wife. He said, Darling, the monkey"
        "is my friend. It would not be fair to take his heart away from him.\n"

        "That means, you don't love me, said the crocodile's wife and began to weep."

        "Don't weep, dear, said the crocodile. I'll bring the monkey's heart for you."

        "The crocodile swiftly swam to the other bank of the river and reached the tree where"
        "the monkey lived.\n"

        "My wife and I invite you to our home for a dinner. My wife is very angry with me for not"
        "having invited you earlier, the crocodile said in a sad tone.\n"

         "But how will I go with you? asked the monkey. I don't know how to swim.\n"

         "Don't worry, said the crocodile. Just ride on my back. I'll take you to my house.\n"

         "The monkey happily sat on the back of the crocodile and the crocodile started his journey"
         "in the water.\n"

         "While in mid stream, the monkey became frightened to see the water all around him and "
         "asked the crocodile to swim at a slow speed so that he did not fall into the river.\n"

         "The crocodile thought that he could reveal his real intentions to the monkey, since it"
         "was impossible for him to escape from the middle of the river. So he said to the monkey,"
         "I am taking you to my home to please my wife. She wants to eat your heart. She says that"
         "since you eat tasty fruits day and night, your heart must be ten times more tasty than "
         "those fruits.\n"

         "The monkey was taken aback to hear these words. He had never expected this type of a "
         "request from a friend. He kept his mental cool and said wittingly, Very well friend. "
         "It would be my privilege to offer my heart to your charming wife. But alas! you didn't "
         "inform me earlier, otherwise, I'd have carried my heart with me. Which I usually keep "
         "in the hollow of the tree.\n"

         "Oh! said the crocodile, I didn't think of it earlier. Now we'll have to go back to the"
         "tree.\n"
         "The crocodile turned and swam back to the bank of the river where the monkey lived.\n"
         "Upon reaching the bank the monkey jumped off the crocodile's back and quickly climbed up "
         "his home tree. \n"

         "The crocodile waited for hours together for the monkey to return carrying his heart.\n"

         "When the crocodile realised that the monkey was taking too long searching for his heart,"
         "he called him from the ground and said, Friend, I believe, you must have found your heart"
         "by now. Now, please come down. My wife must be waiting for us and getting worried.\n"

         "But the monkey laughed and said sitting at the top of the tree, My dear foolish friend."
         "You've deceived me as a friend. Can any one take out his heart and keep that in a hollow."
         "It was all a trick to save my life and teach a lesson to a treacherous friend like you. "
         "Now get lost.\n"
         "The crocodile returned home with his head bent down. \n"

    </string>
    <string name="title2"> THE SHEPHERD AND THE WOLF </string>
    <string name="story2">
    "There lived a shepherd in a village. He had many sheep. He took them out every morning for "
    "grazing. One day, his wife fell ill and he had to go to the city to purchase some medicines "
    "for his ailing wife. 'There will be no one to take care of the sheep', he thought to himself."
    "Then he called his son and told him, Ramu, I'm going to the city to purchase some medicines "
    "for your mother. It will take me two or three days to come back. So take care of the sheep."
    "Save them from being attacked by the tigers and wolves. There are many wild animals in the "
    "nearby forest. They might kill our sheep.\n"

    "Ramu listened to his father's advice carefully and the next day, he left for the nearby "
    "hillside with his flock of sheep. But Ramu was a mischievous boy. He was feeling lonely. "
    "So he wanted to have some fun. He stood on a high rock and began shouting Wolf! wolf!, help. \n"

    "The villagers heard Ramu crying for help. They ran towards the hillside to help the boy, "
    "carrying big sticks in their hands. When they reached there they found that there was no "
    "wolf. The sheep were grazing happily and the shepherd boy was playing on a flute. \n"

    "Where is the wolf? the villagers asked the boy.\n"

    "There is no wolf here. I was joking, the boy said and laughed.\n"

    "The villagers became very angry and returned to their work in the village. \n"

    "Next day, the boy played the same trick. The villagers again reached there to help the boy."
    "But when they came to know that the boy was lying, they felt highly annoyed and went back to "
    "the village cursing the boy. \n"

    "But on the third day, a wolf really came there. The boy got frightened to see his red eyes. "
    "The wolf was huffing and growling. He began advancing towards the flock of sheep, gnashing "
    "his teeth and lolling his tongue. The boy lost his courage and began trembling with fear. "
    "He shouted, Wolf, wolf, please help! But to no avail.\n"

    "This time no one came to help him. The villagers thought that Ramu was up to his old trick.\n"
    "The wolf killed many sheep of Ramu. Ramu returned home weeping.\n\n"

</string>
    <string name="title3"> THE FOUR FRIENDS AND THE HUNTER </string>
</resources>